--- a/Flight_Price_Tracker.ipynb
+++ b/Flight_Price_Tracker.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfN1c/Uu2O1eB1QH4Quihw",
+      "authorship_tag": "ABX9TyMKzMp4f0PuXjejLBFuXgym",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import libraries\n",
         "import pandas as pd\n",
         "import gspread\n",
         "import seaborn as sns\n",
         "from google.colab import auth\n",
-        "from oauth2client.client import GoogleCredentials\n",
         "from google.auth import default\n",
         "from gspread_dataframe import get_as_dataframe\n",
         "import matplotlib.pyplot as plt\n",
@@ -49,11 +47,11 @@
         "    spreadsheet = gc.open(\"Asia Flight Tracker 2024\")\n",
         "    worksheet = spreadsheet.worksheet('Tracker')\n",
         "\n",
-        "    # convert to df\n",
+        "    # Convert to df\n",
         "    df = get_as_dataframe(worksheet)\n",
         "    df = df.dropna(axis=1, how='all')\n",
         "\n",
-        "    # print\n",
+        "    # Print\n",
         "    df.head()\n",
         "\n",
         "    return df\n",
@@ -117,14 +115,17 @@
         "    for key, value in results.items():\n",
         "        print(f\"{key}: {value}\")\n",
         "\n",
-        "def plot_flights2(df):\n",
+        "def plot_flights(df):\n",
         "    # Ensure the Cost column is numeric and remove NaN values\n",
         "    df['Cost'] = pd.to_numeric(df['Cost'].replace({'\\$': '', ',': ''}, regex=True), errors='coerce')\n",
         "    df = df.dropna(subset=['Cost'])\n",
         "\n",
+        "    # Create a copy of the DataFrame to avoid the SettingWithCopyWarning\n",
+        "    df_copy = df.copy()\n",
+        "\n",
         "    # Find the cheapest flights for each airport and destination\n",
-        "    df['Airport_Destination'] = df['Airport'] + ' - ' + df['Destination']\n",
-        "    cheapest_flights_per_airport_destination = df.loc[df.groupby('Airport_Destination')['Cost'].idxmin()]\n",
+        "    df_copy['Airport_Destination'] = df_copy['Airport'] + ' - ' + df_copy['Destination']\n",
+        "    cheapest_flights_per_airport_destination = df_copy.loc[df_copy.groupby('Airport_Destination')['Cost'].idxmin()]\n",
         "\n",
         "    # Create the base line plot\n",
         "    plt.figure(figsize=(12, 6))\n",
@@ -149,7 +150,7 @@
         "    plt.show()\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    # setup auth and extract spreadsheet\n",
+        "    # Setup auth and extract spreadsheet\n",
         "    df = auth_df_setup()\n",
         "\n",
         "    # Table format of some useful flight insights\n",
@@ -157,17 +158,17 @@
         "    print_results(results)\n",
         "\n",
         "    # Plot graph\n",
-        "    plot_flights2(df)\n"
+        "    plot_flights(df)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 806
+          "height": 674
         },
         "id": "XjbFvqu4dxSj",
-        "outputId": "f9d0c125-0f38-420e-dee5-d2cc13e54f74"
+        "outputId": "0e1b6146-ed31-4c06-da44-ada9f15d37bf"
       },
-      "execution_count": 18,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,18 +184,6 @@
             "Highest Cost: 4107.0\n",
             "Cheapest Start Date: 12/24/24\n",
             "Cheapest End Date: 1/4/2025\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-18-d3ab60028d7c>:95: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df['Airport_Destination'] = df['Airport'] + ' - ' + df['Destination']\n"
           ]
         },
         {
